--- a/E-Commerce-Vite/package.json
+++ b/E-Commerce-Vite/package.json
@@ -15,6 +15,7 @@
     "lucide-react": "^0.475.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
     "react-router-dom": "^5.3.4",
     "react-router-dom-v5-compat": "^6.29.0",
     "react-toastify": "^11.0.3",
