--- a/E-Commerce-Vite/package.json
+++ b/E-Commerce-Vite/package.json
@@ -13,9 +13,11 @@
     "axios": "^1.7.9",
     "boxicons": "^2.1.4",
     "lucide-react": "^0.475.0",
+    "md5": "^2.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^5.3.4",
     "react-router-dom-v5-compat": "^6.29.0",
     "react-toastify": "^11.0.3",
